# LandManager

./: CMakeLists.txt  command.cpp  database.cpp  main.cpp  settings.h
